force-app/main/default/objects/Lead/fields/Company_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue__c</fullName>
    <inlineHelpText>Company Revenue</inlineHelpText>
    <label>Company Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>