force-app/main/default/objects/Lead/fields/Conversion_Probability__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Probability__c</fullName>
    <label>Conversion Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>