force-app/main/default/objects/Lead/fields/Priority_Zone__c.field-meta.xml
<CustomField>
    <fullName>Priority_Zone__c</fullName>
    <label>Priority Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>