force-app/main/default/objects/Lead/fields/Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>Score_Reason__c</fullName>
    <label>Score Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>