force-app/main/default/objects/Lead/fields/Score_Source__c.field-meta.xml
<CustomField>
    <fullName>Score_Source__c</fullName>
    <label>Score Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rule</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>