force-app/main/default/objects/Lead/fields/Score_Status__c.field-meta.xml
<CustomField>
    <fullName>Score_Status__c</fullName>
    <label>Score Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>